--- a/app/src/main/res/layout/track_list_fragment.xml
+++ b/app/src/main/res/layout/track_list_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/trackListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -54,11 +55,19 @@
             android:background="@color/yellow">
 
         <ProgressBar
-                android:id="@+id/indeterminateBar"
+                android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_gravity="center" />
+                android:visibility="visible"
+                tools:visibility="gone" />
+
+        <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/processingText"
+                android:gravity="center"
+                tools:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/trackListRecyclerView"
